--- a/www/style.css
+++ b/www/style.css
@@ -1,4 +1,4 @@
-body,table
+body,table,table.tablesorter
 {
     font-family: Verdana,Helvetica,Arial,sans-serif;
     font-size:84%;
@@ -32,18 +32,20 @@ table td{padding:5px; color:#EEEEEE;}
 
 
 table.tablesorter {
-        font-family:arial;
+        /*font-family:arial;
         margin:10px 0pt 15px;
-        font-size: 8pt;
+        font-size: 8pt;*/
+		margin:0 auto;
         width: 100%;
-        text-align: left;
+        text-align: center;
 }
 table.tablesorter thead tr th, table.tablesorter tfoot tr th {
         border: 1px solid #FFF;
-        font-size: 8pt;
         padding: 4px;
 }
 table.tablesorter thead tr .header {
+		padding:10px;
+		padding-right:25px;
         background-image: url(images/bg.gif);
         background-repeat: no-repeat;
         background-position: center right;
@@ -53,10 +55,22 @@ table.tablesorter tbody tr.odd td {
         background-color:#F0F0F6;
 }
 table.tablesorter thead tr .headerSortUp {
+		padding-right:25px;
         background-image: url(images/asc.gif);
 }
 table.tablesorter thead tr .headerSortDown {
+		padding-right:25px;
         background-image: url(images/desc.gif);
 }
 table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
-background-color: #FFFFFF;
+background-color: #FFFFFF;}
+.error{
+	font-weight:bold;
+	background-color:#e51d14;
+	color:#EEEEEE;
+	padding:5px;
+}
+.dlgbox
+{
+	
+}
