--- a/www/style.css
+++ b/www/style.css
@@ -3,17 +3,18 @@ body,table,table.tablesorter
     font-family: Verdana,Helvetica,Arial,sans-serif;
     font-size:84%;
 }
-body
+body, input[type=text]
 {
     background-color: #302c28;
     color: #EEEEEE;
-    text-align:center;
 }
+
+h1,.footer{text-align:center;}
 
 a{color:#FFBB00;}
 a:hover{color: #FF9900;}
 a:visited{color:#e51d14;}
-
+img{border:0;}
 table
 {
     border-collapse:collapse;
@@ -22,6 +23,7 @@ table td,table th{border:solid 1px  #555555;}
 table th{background-color:#3f3934;}
 table th{padding:15px;}
 table td{padding:5px; color:#EEEEEE;}
+table img{border: solid 1px #000000;}
 .highlight td{color: #ffba00}
 .footer
 {
@@ -73,4 +75,18 @@ background-color: #FFFFFF;}
 .dlgbox
 {
 	
+}
+
+#filter-panel{padding:10px 0px 10px 0px;}
+
+#filter-panel .filter-form
+{
+	background-color:#3F3934;
+	padding:1em;
+	line-height:3em;
+}
+
+#filter-panel form
+{
+	display:inline;
 }
